# human.md

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  package.json  pyproject.toml  release-please-config.json  uninstall.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr.yml  release.yml
docs/: INTEGRATION.md  WHY.md
examples/: human-advanced.md  human.md
guard/: core.mjs  core.py  hook.sh  wrapper.bash  wrapper.zsh
spec/: SPEC.md
templates/: human.md
tests/: test.sh  test_guard.mjs  test_guard.py  test_install.sh
